force-app/main/default/objects/Timesheet_entry_detail__c/Timesheet_entry_detail__c.object-meta.xml
<CustomObject>
    <label>Timesheet entry detail</label>
    <nameField>
        <label>Timesheet entry detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Timesheet entry details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>