force-app/main/default/objects/Timesheet_entry_detail__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <label>Hours</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>