force-app/main/default/objects/Timesheet_entry_detail__c/fields/Rate_percentage__c.field-meta.xml
<CustomField>
    <fullName>Rate_percentage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rate percentage</label>
    <referenceTo>Rate_percentage__c</referenceTo>
    <relationshipLabel>Timesheet entry details</relationshipLabel>
    <relationshipName>Timesheet_entry_details</relationshipName>
    <type>Lookup</type>
</CustomField>