force-app/main/default/objects/Timesheet_entry_detail__c/fields/Timesheet_entry__c.field-meta.xml
<CustomField>
    <fullName>Timesheet_entry__c</fullName>
    <label>Timesheet entry</label>
    <referenceTo>Timesheet_entry__c</referenceTo>
    <relationshipLabel>Timesheet entry details</relationshipLabel>
    <relationshipName>Timesheet_entry_details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>