force-app/main/default/objects/Timesheet_entry_detail__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Timesheet_entry_detail_type</valueSetName>
    </valueSet>
</CustomField>